Se soluciono el problema con app.jsx y se agrego la fuente de la serie The Simpsons

--- a/src/Style.css
+++ b/src/Style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.cdnfonts.com/css/homer-simpson-revised');
+
+
+.simpsonfont {
+    font-family: 'Homer Simpson Revised', sans-serif;
+    font-size: 50px;
+  }
 .fondoBody {
     background: rgb(122,178,212);
 background: linear-gradient(90deg, rgba(122,178,212,1) 9%, rgba(200,162,227,1) 96%);
