--- a/src/Style.css
+++ b/src/Style.css
@@ -21,8 +21,9 @@ background: linear-gradient(90deg, rgba(122,178,212,1) 9%, rgba(200,162,227,1) 9
 }
 
 .imagenLogo {
-    max-width: 450px;
+    max-width: 400px;
     height: auto;
+    max-width: 100%;
 }
 
 .btnAjust {
